# hound-whiteboard

./: .gitignore  AGENTS.md  Cargo.toml  README.md  hound-whiteboard-key.jks  package.json
.github/agents/: doc-comment-writer.agent.md
.github/workflows/: ci.yml
.pi/: settings.json
benchmarks/: all.bench.js  chain.bench.js  helpers.js  io-accumulatable-renderer.js  io-accumulatable.bench.js  io-bridge.bench.js  io-direct.bench.js  io-file-granularity.bench.js  io-roundtrip-renderer.js  io-roundtrip.bench.js  io-roundtrip.html  queue.bench.js  worker-render.bench.js  worker-rpc.bench.js
data/locales/: en-US.json  zh-CN.json
data/themes/: dark.json  default.json
dev/: alpha-blend-test.html  electron-security-boundary-and-safe-io.md  rendering-optimization-no-fullscreen-redraw.md  whiteboard-guided-navigation-and-presentation-mode.md
native/: .gitignore  Cargo.toml
native/src/: lib.rs  matrix.rs  point.rs
scripts/: build-entry.cjs  check-doc-links.mjs  check-module-paths.mjs  clean.cjs  gen-icons.cjs  icon-config.json
scripts/ci/: check-doc-links.mjs  (+1 more)
src/: DevOps 须知.md  core-worker.js  index.html  io-bridge-common.js  io-bridge-main.js  io-bridge-renderer.js  main.js  preload-io.js  preload.js
src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
test/: algorithm.test.js  chain.test.js  deque.test.js  directed-graph.test.js  math.test.js  matrix.test.js  point.test.js  queue.test.js  rust-example.test.js  tier-graph.test.js  tire-graph.test.js
(+1173 files in other folders)
