[package]
name = "hound-whiteboard"
version = "0.0.1"
description = "A whiteboard app"
authors = ["Frank Steven"]
license = "MIT"
edition = "2021"

[lib]
name = "hound_whiteboard_lib"
crate-type = ["cdylib", "staticlib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "hound-whiteboard"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
